--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -4,11 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curso Node - Fernando Herrera</title>
 </head>
 <body>
-    <h1>Acceso denegado...</h1>
-    <hr>
+    <h1>Google Sign - In</h1>
+    <hr />
+    <div id="g_id_onload"
+         data-client_id="196667016438-4c9kke7r9hcbbkoi4oqehic9k9qhbs40.apps.googleusercontent.com"
+         data-auto_prompt="false"
+         data-callback="handleCredentialResponse"
+    >
+    </div>
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+    <button id="google_signout">
+        Salir.
+    </button>
+    <hr />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        function handleCredentialResponse(response) {
+
+
+            console.log ('GOOGLE TOKEN - ID_TOKEN ',response.credential);
+            const body = { id_token: response.credential}
+
+            // Llamamos el endpoint y le enviaos el token
+            fetch ('http://localhost:8080/api/auth/google',{
+                method: 'POST',
+                headers: {
+                    'Content-Type':'application/json'
+                },
+                body: JSON.stringify ( body )
+            })
+                .then ( resp => resp.json ())
+                .then ( resp => {
+                    console.log ( resp )
+                    localStorage.setItem( 'email', resp.usuario.correo)
+                } )
+                .catch ( console.warn)
+
+        }
+
+        const button = document.getElementById('google_signout')
+        // no funciona!!!!
+        button.onclick = () => {
+            console.log ( google.accounts.id, 'EMAIL...', localStorage.getItem( 'email'))
+            google.accounts.id.disableAutoSelect();
+            google.accounts.id.revoke ( localStorage.getItem( 'email', done =>{
+                console.log ('BORRAMOS SESIÓN...')
+                localStorage.clear()
+                location.reload()
+            }))
+        }
+
+
+      </script>
     
 </body>
 </html>
