--- a/10-socket-chat/public/chat.html
+++ b/10-socket-chat/public/chat.html
@@ -9,8 +9,37 @@
 </head>
 <body class="container mt-5">
     <h1>Chat de Estudio</h1>
-
+    <div class="row mt-5">
+        <div class="col-sm-6">
+            <h3>Enviar Mensaje</h3>
+            <hr>
+            <input type="text"
+                id="txtUid"
+                class="form-control mb-2"
+                placeholder="Uid"
+                autocomplete="off"
+            >
+            <input type="text"
+                id="txtMensaje"
+                class="form-control mb-2"
+                placeholder="Mensaje"
+                autocomplete="off"
+            >
+            <h3>Usuarios activos</h3>
+            <hr>
+            <ul id="ulUsuarios">
     
+            </ul>
+        </div>
+        <div class="col-sm-6">
+            <h3>Chat completo</h3>
+            <hr>
+            <ul id="ulMensajes">
+    
+            </ul>
+        </div>
+    </div>
+    <button id="btnSalir" class="btn btn-outline-danger">Logout</button>
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/chat.js"></script>
 </body>
